--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/02_Ejercicios_Workout/09_Ejercicios_Vectores.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/02_Ejercicios_Workout/09_Ejercicios_Vectores.ipynb
@@ -67,9 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Rodrigo': [5, 4], 'Lucia': [2, -3], 'Alejandro': [3, 5], 'Valeria': [-5, 4], 'Javier': [0, -1], 'Camila': [3, 2], 'Diego': [-1, 1], 'Gabriela': [5, -2], 'Mateo': [-5, 3], 'Sofía': [-5, 1], 'Teresa': [-2, -5], 'Udo': [0, 4]}\n"
+     ]
+    }
+   ],
    "source": [
     "alumnos_aidone = {\n",
     "    \"Rodrigo\": [5,4],\n",
@@ -82,7 +90,13 @@
     "    'Gabriela': [5, -2],\n",
     "    'Mateo': [-5, 3],\n",
     "    'Sofía': [-5, 1]\n",
-    "}"
+    "}\n",
+    "def add_alumno(nombre, volar, comer, diccionario):\n",
+    "    diccionario[nombre] = [volar,comer]\n",
+    "add_alumno(\"Teresa\",-2,-5,alumnos_aidone)\n",
+    "add_alumno(\"Udo\",0,4,alumnos_aidone)\n",
+    "print(alumnos_aidone)\n",
+    "\n"
    ]
   },
   {
@@ -108,10 +122,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alumnos comer:  {'Rodrigo': [5, 4], 'Gabriela': [5, -2]}\n",
+      "alumnos volar:  {'Alejandro': [3, 5]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "alumnos_comer = {}\n",
+    "alumnos_volar = {}\n",
+    "for nombre, valores in alumnos_aidone.items():\n",
+    "    for valor in valores:\n",
+    "        i = valores.index(valor)\n",
+    "        if valor == 5:\n",
+    "            if i == 0:\n",
+    "                alumnos_comer[nombre] = valores\n",
+    "            else:\n",
+    "                alumnos_volar[nombre] = valores\n",
+    "print(\"alumnos comer: \",alumnos_comer)\n",
+    "print(\"alumnos volar: \", alumnos_volar)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,10 +182,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Para Rodrigo, el curso asignado es CAI\n",
+      "Para Lucia, el curso asignado es ER\n",
+      "Para Alejandro, el curso asignado es CAI\n",
+      "Para Valeria, el curso asignado es NMPC\n",
+      "Para Javier, el curso asignado es ER\n",
+      "Para Camila, el curso asignado es CAI\n",
+      "Para Diego, el curso asignado es NMPC\n",
+      "Para Gabriela, el curso asignado es ER\n",
+      "Para Mateo, el curso asignado es NMPC\n",
+      "Para Sofía, el curso asignado es NMPC\n",
+      "Para Teresa, el curso asignado es ER\n",
+      "Para Udo, el curso asignado es CAI\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def distancia_2d(vec1,vec2,precision = 2):\n",
+    "    suma = 0\n",
+    "    for indice_componente in range(2):\n",
+    "        suma += (vec1[indice_componente]-vec2[indice_componente])**2\n",
+    "    distancia = math.sqrt(suma)\n",
+    "    distancia = round(distancia, precision)\n",
+    "    return distancia\n",
+    "\n",
+    "alumnos_ref = [\"Rodrigo\",\"Gabriela\",\"Mateo\"]\n",
+    "curso_asignado = [\"CAI\",\"ER\",\"NMPC\"]\n",
+    "diccionario_reparto = {}\n",
+    "\n",
+    "for alumno, vector in alumnos_aidone.items(): # Recorremos el diccionario donde tenemos el vector que caracteriza \n",
+    "    # cada alumno\n",
+    "    \n",
+    "    distancia_minima = 99999999 # Por ahora cualquier distancia a los \n",
+    "    #alumons de referencia es buena\n",
+    "    \n",
+    "    indice_distancia_minima = -1 # Tenemos un indice al curso-alumno de referencia\n",
+    "    diccionario_reparto[alumno] = {\"distancias\": [], \"curso_elegido\": \"\"}\n",
+    "    # Creamos una colección, un diccionario para almacenar los resultados\n",
+    "\n",
+    "    for indice_curso,alumno_ref in enumerate(alumnos_ref): # Y ahora el bucle para \n",
+    "        # calcular la distancia a los vectores de los alumnos de referencia\n",
+    "        vec_ref = alumnos_aidone[alumno_ref] # Recuperamos el vector que \n",
+    "        # caracteriza al alumno de referencia\n",
+    "        \n",
+    "        distancia = distancia_2d(vector, vec_ref, 1) # Obtenemos la distancia \n",
+    "        # con el alumno del bucle principal\n",
+    "        if distancia < distancia_minima: # Y vemos si es menor que #\n",
+    "            # la distancia mínima última para el alumno del bucle principal\n",
+    "            distancia_minima = distancia # Si lo es, actualizamos \n",
+    "            #la nueva distancia mínima\n",
+    "            indice_distancia_minima = indice_curso # Y actualizamos \n",
+    "            # el indice del curso escogido\n",
+    "        \n",
+    "        diccionario_reparto[alumno][\"distancias\"].append(distancia) \n",
+    "        # en cualquier caso me guardo la distancia calculada...\n",
+    "        diccionario_reparto[alumno][\"curso_elegido\"] = \\\n",
+    "        curso_asignado[indice_distancia_minima] # Traduzo el indice del curso al curso\n",
+    "    print(f\"Para {alumno}, el curso asignado es \" + \\\n",
+    "          f\"{diccionario_reparto[alumno]['curso_elegido']}\") # Y vamos volcando \n",
+    "        # la elección de nuestro algoritmo\n"
+   ]
   },
   {
    "attachments": {
@@ -174,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,10 +291,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los vectores deben ser de la misma longitud\n"
+     ]
+    }
+   ],
+   "source": [
+    "def distancia_nd(vec_1, vec_2, precision = 2):\n",
+    "    suma = 0\n",
+    "    if len(vec_1) != len(vec_2):\n",
+    "        print(\"Los vectores deben ser de la misma longitud\")\n",
+    "    else:\n",
+    "        for indice_componente in range(len(vec_1)):\n",
+    "            suma += (vec_1[indice_componente]-vec_2[indice_componente])**2\n",
+    "        distancia = math.sqrt(suma)\n",
+    "        distancia = round(distancia, precision)\n",
+    "        return distancia\n",
+    "distancia_nd([1,2],[2,3,4])"
+   ]
   },
   {
    "attachments": {
@@ -220,11 +340,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vec1 = [12,-4,3,0, 3.5]\n",
+    "vec1 = [12,-4.3,0, 3.5]\n",
     "vec2 = [1, 3, -0.33, -12.1]\n",
     "vec3 = [-2,0,-1,0]\n",
     "vec4 = [0,0,1,1]\n"
@@ -232,10 +352,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.44\n",
+      "15.09\n",
+      "13.03\n",
+      "12.84\n",
+      "13.54\n",
+      "3.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(distancia_nd(vec1, vec2))\n",
+    "print(distancia_nd(vec1, vec3))\n",
+    "print(distancia_nd(vec1, vec4))\n",
+    "print(distancia_nd(vec2, vec3))\n",
+    "print(distancia_nd(vec2, vec4))\n",
+    "print(distancia_nd(vec3, vec4))\n",
+    "print(distancia_nd(vec1, vec1))\n",
+    "print(distancia_nd(vec2, vec2))\n",
+    "print(distancia_nd(vec3, vec3))\n",
+    "print(distancia_nd(vec4, vec4))"
+   ]
   },
   {
    "attachments": {
@@ -263,6 +411,20 @@
     "Crea una tabla de 3x3  en markdown con los resultados\n",
     "\n",
     "![image-2.png](attachment:image-2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|       | **Vec1** | **Vec2** | **Vec3** | **Vec4** |\n",
+    "|-------|-----------|-----------|-----------|-----------|\n",
+    "| **Vec1** | 0     | 20.44 | 15.09 | 13.03 |\n",
+    "| **Vec2** | 20.44 | 0     | 12.84 | 13.54 |\n",
+    "| **Vec3** | 15.09 | 12.84 | 0     | 3.00  |\n",
+    "| **Vec4** | 13.03 | 13.54 | 3.00  | 0     |\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -300,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,6 +479,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def norm_vec(vec, precision = 1):\n",
     "    escalar = dot_product(vec,vec) # Esta es la magia de las funciones y los métodos construir unos sobre otros :-), reusar, craft, craft\n",
@@ -329,25 +498,64 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "def cos_vec(vec1, vec2, precision = 1): \n",
     "    resultado =dot_product(vec1,vec2)/(norm_vec(vec1) * norm_vec(vec2))\n",
     "    resultado = round(resultado, precision)\n",
-    "    return resultado"
+    "    return resultado\n",
+    "\n",
+    "cos_vec(vec1,vec4)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Vec1*Vec2': -0.3, 'Vec1*Vec3': -0.8, 'Vec1*Vec4': 0.2, 'Vec2*Vec3': -0.1, 'Vec2*Vec4': -0.7, 'Vec3*Vec4': -0.3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "vec1 = [12,-4.3,0, 3.5]\n",
+    "vec2 = [1, 3, -0.33, -12.1]\n",
+    "vec3 = [-2,0,-1,0]\n",
+    "vec4 = [0,0,1,1]\n",
+    "\n",
+    "def calculador(*args):\n",
+    "    lista = {}\n",
+    "    for i in range(len(list(args))):\n",
+    "        a = i +1\n",
+    "        while a <= len(args)-1:\n",
+    "            lista[f\"Vec{i+1}*Vec{a+1}\"] = cos_vec(args[i], args[a])\n",
+    "            a += 1\n",
+    "    print (lista)\n",
+    "\n",
+    "calculador(vec1,vec2,vec3,vec4)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -361,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
