--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/02_Ejercicios_Workout/11_Ejercicios_Hello_Numpy.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/02_Ejercicios_Workout/11_Ejercicios_Hello_Numpy.ipynb
@@ -51,10 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "attachments": {
@@ -79,10 +81,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def distancias(*args):\n",
+    "    listadistancias = {}\n",
+    "    for indice,arg in enumerate(args):\n",
+    "        n= 1\n",
+    "        if indice + n <len(args)-1:\n",
+    "            if len(arg) != len(args[indice+n]):\n",
+    "                print(f\"Los valores{arg} {args[indice+n]} no tienen las mismas dimensiones\")\n",
+    "            else:\n",
+    "                listadistancias[f\"distancia entre {arg}*{args[indice+n]}\"] = np.linalg.norm(arg-args[indice+n])\n",
+    "                n +=1\n",
+    "    return listadistancias\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def distancias2(*args):\n",
+    "    listadistancias = {}\n",
+    "    for i, vec_i in enumerate(args):\n",
+    "        for j, vec_j in enumerate(args[i+1:], start=i+1):\n",
+    "            if len(vec_i) != len(vec_j):\n",
+    "                distancia = f\"Los vectores Vec{i+1} y Vec{j+1} no tienen las mismas dimensiones\"\n",
+    "                listadistancias[f\"distancia entre Vec{i+1} y Vec{j+1}\"] = distancia\n",
+    "            else:\n",
+    "                distancia = np.linalg.norm(np.array(vec_i) - np.array(vec_j))\n",
+    "                listadistancias[f\"distancia entre Vec{i+1} y Vec{j+1}\"] = round(distancia, 2)\n",
+    "    return listadistancias\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
@@ -107,24 +144,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "vec1 = [12,-4,3,0, 3.5]\n",
     "vec2 = [1, 3, -0.33, -12.1]\n",
     "vec3 = [1,0,-4]\n",
-    "vec3 = [-2,0,-1,0]\n",
-    "vec4 = [0,0,1,1]\n",
-    "lista_vectores = [vec1,vec2,vec3,vec4]\n"
+    "vec4 = [-2,0,-1,0]\n",
+    "vec5 = [0,0,1,1]\n",
+    "lista_vectores = [vec1,vec2,vec3,vec4, vec5]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'distancia entre Vec1 y Vec2': 'Los vectores Vec1 y Vec2 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec1 y Vec3': 'Los vectores Vec1 y Vec3 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec1 y Vec4': 'Los vectores Vec1 y Vec4 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec1 y Vec5': 'Los vectores Vec1 y Vec5 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec2 y Vec3': 'Los vectores Vec2 y Vec3 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec2 y Vec4': np.float64(12.84),\n",
+       " 'distancia entre Vec2 y Vec5': np.float64(13.54),\n",
+       " 'distancia entre Vec3 y Vec4': 'Los vectores Vec3 y Vec4 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec3 y Vec5': 'Los vectores Vec3 y Vec5 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec4 y Vec5': np.float64(3.0)}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "distancias2(vec4,vec5)\n",
+    "distancias2(*lista_vectores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "distancias = distancias2(*lista_vectores)"
+   ]
   },
   {
    "attachments": {
@@ -149,10 +218,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cosenos(arg1,arg2):\n",
+    "    v1 = np.array(arg1)\n",
+    "    v2 = np.array(arg2)\n",
+    "    norm_1 = np.linalg.norm(v1)\n",
+    "    norm_2 = np.linalg.norm(v2)\n",
+    "    dot_product = np.dot(v1,v2)\n",
+    "    cos_ang_1_2 = dot_product/(norm_1*norm_2)\n",
+    "    return cos_ang_1_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cosenos2(arg1, arg2):\n",
+    "    v1 = np.array(arg1)\n",
+    "    v2 = np.array(arg2)\n",
+    "    if len(v1) != len(v2):\n",
+    "        raise ValueError(\"Los vectores deben tener la misma dimensión.\")\n",
+    "    norm_1 = np.linalg.norm(v1)\n",
+    "    norm_2 = np.linalg.norm(v2)\n",
+    "    dot_product = np.dot(v1, v2)\n",
+    "    return round(dot_product / (norm_1 * norm_2), 4) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def listacosenos(*args):\n",
+    "    listacosenos = {}\n",
+    "    for i, vec_i in enumerate(args):\n",
+    "        for j, vec_j in enumerate(args[i+1:], start=i+1):\n",
+    "            if len(vec_i) != len(vec_j):\n",
+    "                distancia = f\"Los vectores Vec{i+1} y Vec{j+1} no tienen las mismas dimensiones\"\n",
+    "                listacosenos[f\"distancia entre Vec{i+1} y Vec{j+1}\"] = distancia\n",
+    "            else:\n",
+    "                distancia = cosenos(vec_i,vec_j)\n",
+    "                listacosenos[f\"distancia entre Vec{i+1} y Vec{j+1}\"] = distancia\n",
+    "    return listacosenos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'distancia entre Vec1 y Vec2': 'Los vectores Vec1 y Vec2 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec1 y Vec3': 'Los vectores Vec1 y Vec3 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec1 y Vec4': 'Los vectores Vec1 y Vec4 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec1 y Vec5': 'Los vectores Vec1 y Vec5 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec2 y Vec3': 'Los vectores Vec2 y Vec3 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec2 y Vec4': np.float64(-0.05969639088973997),\n",
+       " 'distancia entre Vec2 y Vec5': np.float64(-0.7025427191197805),\n",
+       " 'distancia entre Vec3 y Vec4': 'Los vectores Vec3 y Vec4 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec3 y Vec5': 'Los vectores Vec3 y Vec5 no tienen las mismas dimensiones',\n",
+       " 'distancia entre Vec4 y Vec5': np.float64(-0.31622776601683794)}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listacosenos(*lista_vectores)"
+   ]
   },
   {
    "attachments": {
@@ -231,7 +374,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -245,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
