--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_I.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_I.ipynb
@@ -77,10 +77,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Rafa, en la tienda Manolo Bakes gasta': 50,\n",
+       " 'Rafa, en la tienda Starbucks gasta': 49,\n",
+       " 'Nacho, en la tienda Manolo Bakes gasta': 58,\n",
+       " 'Nacho, en la tienda Starbucks gasta': 61,\n",
+       " 'Clara, en la tienda Manolo Bakes gasta': 44,\n",
+       " 'Clara, en la tienda Starbucks gasta': 44}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "lista_personas =[\"Rafa\",\"Nacho\",\"Clara\"]\n",
+    "lista_productos =[\"Palmera\",\"Donut\",\"Hojaldre\",\"Tarta\"]\n",
+    "lista_sitios = [\"Manolo Bakes\",\"Starbucks\"]\n",
+    "matrices_consumo = np.array([[6,5,3,1],\n",
+    "                              [3,6,2,2],\n",
+    "                              [3,4,3,1]])\n",
+    "matrices_precios = np.array([[1.5,1],\n",
+    "                              [2,2.5],\n",
+    "                              [5,4.5],\n",
+    "                              [16,17]])\n",
+    "\n",
+    "matriz_gastos_por_persona = {}\n",
+    "matriz_gastos = matrices_consumo.dot(matrices_precios)\n",
+    "for i, valor in enumerate(lista_personas):\n",
+    "     for j, valor2 in enumerate(lista_sitios):\n",
+    "         matriz_gastos_por_persona[f\"{valor}, en la tienda {valor2} gasta\"] = round(matriz_gastos[i][j])\n",
+    "matriz_recomendaciones = []\n",
+    "\n",
+    "for indice,valor in enumerate(matriz_gastos): \n",
+    "    valor_minimo = 10000\n",
+    "    for indice2,valor2 in enumerate(valor):\n",
+    "        if valor2 < valor_minimo:\n",
+    "             valor_minimo = valor2\n",
+    "             indice_valor_minimo = indice2\n",
+    "    matriz_recomendaciones.append(f\"Para {lista_personas[indice]} el mejor sitio es {lista_sitios[indice_valor_minimo]}\")\n",
+    "\n",
+    "\n",
+    "matriz_gastos_por_persona\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[50. , 49. ],\n",
+       "       [58.5, 61. ],\n",
+       "       [43.5, 43.5]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_gastos\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Para Rafa el mejor sitio es Starbucks',\n",
+       " 'Para Nacho el mejor sitio es Manolo Bakes',\n",
+       " 'Para Clara el mejor sitio es Manolo Bakes']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_recomendaciones"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,8 +224,37 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'toy_story': array([0, 1, 1, 1, 0]),\n",
+       " 'jumanji': array([0, 1, 0, 0, 0]),\n",
+       " 'mortal_kombat': array([1, 1, 0, 0, 0]),\n",
+       " 'pocahontas': array([0, 0, 1, 0, 1])}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "toy_story = np.array([0,1,1,1,0])\n",
+    "jumanji = np.array([0,1,0,0,0])\n",
+    "mortal_kombat = np.array([1,1,0,0,0])\n",
+    "pocahontas = np.array([0,0,1,0,1])\n",
+    "peliculas = {}\n",
+    "def agregarpeliculas(**kwargs):\n",
+    "    for clave, valor in kwargs.items():\n",
+    "        peliculas[clave] = valor\n",
+    "    return peliculas\n",
+    "agregarpeliculas(\n",
+    "    toy_story=toy_story,\n",
+    "    jumanji=jumanji,\n",
+    "    mortal_kombat=mortal_kombat,\n",
+    "    pocahontas=pocahontas)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,10 +267,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "2\n",
+      "(4, 5)\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz_peliculas = np.array([toy_story,\n",
+    "                             jumanji,\n",
+    "                             mortal_kombat,\n",
+    "                             pocahontas])\n",
+    "\n",
+    "print(type(matriz_peliculas))\n",
+    "print(matriz_peliculas.ndim)\n",
+    "print(matriz_peliculas.shape)\n",
+    "print(matriz_peliculas.size)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,6 +309,50 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Para la película 'toy_story', la más semejante es 'jumanji' (cos=0.5773502691896258)\",\n",
+       " \"Para la película 'jumanji', la más semejante es 'mortal_kombat' (cos=0.7071067811865475)\",\n",
+       " \"Para la película 'mortal_kombat', la más semejante es 'jumanji' (cos=0.7071067811865475)\",\n",
+       " \"Para la película 'pocahontas', la más semejante es 'toy_story' (cos=0.40824829046386296)\"]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def similitud_por_coseno(peliculas):\n",
+    "    matriz_similitudes = []\n",
+    "    nombres = list(peliculas.keys())\n",
+    "    vectores = list(peliculas.values())\n",
+    "    for i, v1 in enumerate(vectores):\n",
+    "        coseno_maximo = -2\n",
+    "        pelicula_mas_parecida = None\n",
+    "        for j, v2 in enumerate(vectores):\n",
+    "            if i != j:  \n",
+    "                producto = np.dot(v1, v2)\n",
+    "                norma1 = np.linalg.norm(v1)\n",
+    "                norma2 = np.linalg.norm(v2)\n",
+    "                coseno = producto / (norma1 * norma2)\n",
+    "                if coseno > coseno_maximo:\n",
+    "                    coseno_maximo = coseno\n",
+    "                    pelicula_mas_parecida = nombres[j]\n",
+    "        matriz_similitudes.append(f\"Para la película '{nombres[i]}', la más semejante es '{pelicula_mas_parecida}' (cos={coseno_maximo})\")\n",
+    "\n",
+    "    return matriz_similitudes\n",
+    "similitud_por_coseno(peliculas)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -178,21 +363,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Para la película 'toy_story', la más semejante es 'wall_e' (cos=0.6666666666666667)\",\n",
+       " \"Para la película 'jumanji', la más semejante es 'mortal_kombat' (cos=0.7071067811865475)\",\n",
+       " \"Para la película 'mortal_kombat', la más semejante es 'wall_e' (cos=0.8164965809277259)\",\n",
+       " \"Para la película 'pocahontas', la más semejante es 'toy_story' (cos=0.40824829046386296)\",\n",
+       " \"Para la película 'wall_e', la más semejante es 'mortal_kombat' (cos=0.8164965809277259)\"]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wall_e = np.array([1,1,0,1,0])\n",
+    "\n",
+    "agregarpeliculas(\n",
+    "    toy_story=toy_story,\n",
+    "    jumanji=jumanji,\n",
+    "    mortal_kombat=mortal_kombat,\n",
+    "    pocahontas=pocahontas,\n",
+    "    wall_e=wall_e)\n",
+    "similitud_por_coseno(peliculas)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
