--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/02_Ejercicios_Workout/10_Ejercicios_Matrices.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/02_Ejercicios_Workout/10_Ejercicios_Matrices.ipynb
@@ -57,9 +57,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Rodrigo': [0.0, 6.0, 10.0],\n",
+       " 'Lucia': [7.6, 3.2, 9.2],\n",
+       " 'Alejandro': [2.2, 7.3, 8.2],\n",
+       " 'Valeria': [10.0, 11.7, 1.0],\n",
+       " 'Javier': [7.1, 5.1, 6.4],\n",
+       " 'Camila': [2.8, 4.5, 8.1],\n",
+       " 'Diego': [6.7, 6.7, 4.5],\n",
+       " 'Gabriela': [6.0, 0.0, 11.2],\n",
+       " 'Mateo': [10.0, 11.2, 0.0],\n",
+       " 'Sofía': [10.4, 10.4, 2.0],\n",
+       " 'Teresa': [11.4, 7.6, 8.5],\n",
+       " 'Udo': [5.0, 7.8, 5.1]}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alumnos_aidone_modificado = {\n",
     "    \"Rodrigo\": [5,4],\n",
@@ -74,15 +96,80 @@
     "    'Sofía': [-5, 1],\n",
     "    'Teresa': [-2,-5],\n",
     "    'Udo': [0,4]\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "def distancia_2d(vec1,vec2,precision = 2):\n",
+    "    suma = 0\n",
+    "    for indice_componente in range(2):\n",
+    "        suma += (vec1[indice_componente]-vec2[indice_componente])**2\n",
+    "    distancia = math.sqrt(suma)\n",
+    "    distancia = round(distancia, precision)\n",
+    "    return distancia\n",
+    "\n",
+    "alumnos_ref = [\"Rodrigo\",\"Gabriela\",\"Mateo\"]\n",
+    "curso_asignado = [\"CAI\",\"ER\",\"NMPC\"]\n",
+    "diccionario_reparto = {}\n",
+    "\n",
+    "for alumno, vector in alumnos_aidone_modificado.items():\n",
+    "    diccionario_reparto[alumno] = []\n",
+    "    for indice_curso,alumno_ref in enumerate(alumnos_ref):\n",
+    "        vec_ref = alumnos_aidone_modificado[alumno_ref]\n",
+    "        distancia = distancia_2d(vector, vec_ref, 1)\n",
+    "        diccionario_reparto[alumno].append(distancia) \n",
+    "(diccionario_reparto)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4, 1.5, 0.5],\n",
+       " [1.5, 4, 0.5],\n",
+       " [4, 1.5, 0.5],\n",
+       " [1.5, 0.5, 4],\n",
+       " [0.5, 4, 1.5],\n",
+       " [4, 1.5, 0.5],\n",
+       " [0.5, 1.5, 4],\n",
+       " [1.5, 4, 0.5],\n",
+       " [1.5, 0.5, 4],\n",
+       " [0.5, 1.5, 4],\n",
+       " [0.5, 4, 1.5],\n",
+       " [4, 0.5, 1.5]]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz_resultado = []\n",
+    "\n",
+    "for alumno, distancias in diccionario_reparto.items():\n",
+    "    vec_asignacion = []\n",
+    "    maximo = max(distancias)\n",
+    "    minimo = min(distancias)\n",
+    "    maximo_asignado = False\n",
+    "    minimo_asignado = False\n",
+    "    for indice, curso in enumerate(curso_asignado):\n",
+    "        distancia = distancias[indice]\n",
+    "        if distancia == maximo and not maximo_asignado:\n",
+    "            vec_asignacion.append(0.5)\n",
+    "            maximo_asignado = True\n",
+    "        elif distancia == minimo and not minimo_asignado:\n",
+    "            vec_asignacion.append(4)\n",
+    "            minimo_asignado = True\n",
+    "        else:\n",
+    "            vec_asignacion.append(1.5)\n",
+    "    matriz_resultado.append(vec_asignacion)\n",
+    "matriz_resultado"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +203,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2.0, 0.75, 0.25],\n",
+       " [0.75, 2.0, 0.25],\n",
+       " [2.0, 0.75, 0.25],\n",
+       " [0.75, 0.25, 2.0],\n",
+       " [0.25, 2.0, 0.75],\n",
+       " [2.0, 0.75, 0.25],\n",
+       " [0.25, 0.75, 2.0],\n",
+       " [0.75, 2.0, 0.25],\n",
+       " [0.75, 0.25, 2.0],\n",
+       " [0.25, 0.75, 2.0],\n",
+       " [0.25, 2.0, 0.75],\n",
+       " [2.0, 0.25, 0.75]]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def escalar_product(escalar, matriz):\n",
+    "    matriz_resultado = []\n",
+    "    for vector_fila in matriz:\n",
+    "        nuevo_vector_fila = []\n",
+    "        for componente in vector_fila:\n",
+    "            producto = escalar*componente\n",
+    "            nuevo_vector_fila.append(producto)\n",
+    "        matriz_resultado.append(nuevo_vector_fila)\n",
+    "    return matriz_resultado\n",
+    "\n",
+    "def escalar_division(escalar, matriz):\n",
+    "    matriz_resultado = []\n",
+    "    for vector_fila in matriz:\n",
+    "        nuevo_vector_fila = []\n",
+    "        for componente in vector_fila:\n",
+    "            producto = componente/escalar\n",
+    "            nuevo_vector_fila.append(producto)\n",
+    "        matriz_resultado.append(nuevo_vector_fila)\n",
+    "    return matriz_resultado\n",
+    "escalar_division(2, matriz_resultado)"
+   ]
   },
   {
    "attachments": {
@@ -144,10 +274,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def multiplicacion_division_horas(multiplicacion, division, matriz):\n",
+    "    matriz_resultado2 = []\n",
+    "    if multiplicacion != 0:\n",
+    "        for vector_fila in matriz:\n",
+    "            nuevo_vector_fila = []\n",
+    "            for componente in vector_fila:\n",
+    "                producto = multiplicacion*componente\n",
+    "                nuevo_vector_fila.append(producto)\n",
+    "            matriz_resultado2.append(nuevo_vector_fila)\n",
+    "    if division != 0:\n",
+    "        matriz_resultadofinal =[]\n",
+    "        for vector_fila in matriz_resultado2:\n",
+    "            nuevo_vector_fila = []\n",
+    "            for componente in vector_fila:\n",
+    "                producto = componente/division\n",
+    "                nuevo_vector_fila.append(producto)\n",
+    "            matriz_resultadofinal.append(nuevo_vector_fila)\n",
+    "    return matriz_resultadofinal\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4.0, 1.5, 0.5],\n",
+       " [1.5, 4.0, 0.5],\n",
+       " [4.0, 1.5, 0.5],\n",
+       " [1.5, 0.5, 4.0],\n",
+       " [0.5, 4.0, 1.5],\n",
+       " [4.0, 1.5, 0.5],\n",
+       " [0.5, 1.5, 4.0],\n",
+       " [1.5, 4.0, 0.5],\n",
+       " [1.5, 0.5, 4.0],\n",
+       " [0.5, 1.5, 4.0],\n",
+       " [0.5, 4.0, 1.5],\n",
+       " [4.0, 0.5, 1.5]]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiplicacion_division_horas(2,2,matriz_resultado)"
+   ]
   },
   {
    "attachments": {
@@ -172,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,18 +379,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Esta es la función que tienes que modificar\n",
     "def mut_mat(matriz_A, matriz_B):\n",
     "    matriz_resultado = []\n",
-    "    for fila in matriz_A:\n",
-    "        fila_nueva = []\n",
-    "        for columna in get_vec_col(matriz_B):\n",
-    "            fila_nueva.append(dot_product(fila,columna))\n",
-    "        matriz_resultado.append(fila_nueva)\n",
+    "    if len(matriz_A[0]) != len(matriz_B):\n",
+    "        print(\"No se puede realizar la funcion\")\n",
+    "    else:\n",
+    "        \n",
+    "        for fila in matriz_A:\n",
+    "            fila_nueva = []\n",
+    "            for columna in get_vec_col(matriz_B):\n",
+    "                fila_nueva.append(dot_product(fila,columna))\n",
+    "            matriz_resultado.append(fila_nueva)\n",
     "    return matriz_resultado "
    ]
   },
@@ -217,8 +402,59 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0],\n",
+       " [6.0, 12.0, 18.0]]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mut_mat(matriz_resultado,[[1,2,3],[1,2,3],[1,2,3]])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se puede realizar la funcion\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mut_mat(matriz_resultado,matriz_resultado)"
+   ]
   },
   {
    "attachments": {
@@ -254,8 +490,71 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[93, 59], [66, 48], [47, 45]]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [[9,5,8,5],[6,6,3,6],[0,8,1,9]]\n",
+    "B = [[4,2],[2,2],[4,2],[3,3]]\n",
+    "C = [[-2,1,0],[-1,3,3]]\n",
+    "mut_mat(A,B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se puede realizar la funcion\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mut_mat(A,C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-10, 10, 6], [-6, 8, 6], [-10, 10, 6], [-9, 12, 9]]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mut_mat(B,C)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -283,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
